Update service name to sentiment-review-dashboard

--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,6 @@
 services:
   - type: web
-    name: review-dashboard
+    name: sentiment-review-dashboard
     env: node
     buildCommand: npm install && npm run build
     startCommand: npx serve -s dist -l 3000
