--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     env: node
     buildCommand: npm install && npm run build
     startCommand: npx serve -s dist -l 3000
-    publishDir: dist
+    staticPublishPath: ./dist
     envVars:
       - key: NODE_VERSION
         value: 22.16.0
