--- a/render.yaml
+++ b/render.yaml
@@ -3,8 +3,7 @@ services:
     name: sentiment-review-dashboard
     env: node
     buildCommand: npm install && npm run build
-    startCommand: npx serve -s dist -l 3000
-    staticPublishPath: ./dist
+    startCommand: npx serve -s dist -p $PORT
     envVars:
       - key: NODE_VERSION
         value: 22.16.0
