--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: sentiment-review-dashboard
     env: node
-    buildCommand: npm install && npm run build
+    buildCommand: cd /opt/render/project && npm install && npm run build
     startCommand: npx serve -s dist -p $PORT
     envVars:
       - key: NODE_VERSION
