--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: sentiment-review-dashboard
     env: node
-    buildCommand: pwd && ls -la && find . -name "package.json" | head -10
+    buildCommand: pwd && ls -la && npm install && npm run build && ls -la dist/
     startCommand: npx serve -s dist -p $PORT
     envVars:
       - key: NODE_VERSION
