--- a/render-backend.yaml
+++ b/render-backend.yaml
@@ -3,8 +3,8 @@ services:
   - type: web
     name: sentiment-review-backend
     env: node
-    buildCommand: echo "Backend service placeholder - no build required"
-    startCommand: node -e "const http = require('http'); const server = http.createServer((req, res) => { res.writeHead(200, {'Content-Type': 'application/json', 'Access-Control-Allow-Origin': '*'}); res.end(JSON.stringify({message: 'Backend placeholder service', status: 'ok'})); }); server.listen(process.env.PORT || 3000, () => console.log('Placeholder backend running on port', process.env.PORT || 3000));"
+    buildCommand: cd Documents/sentiment/review-dashboard/backend && npm install
+    startCommand: cd Documents/sentiment/review-dashboard/backend && npm run start:production
     envVars:
       - key: NODE_VERSION
         value: 22.16.0
