--- a/Documents/sentiment/review-dashboard/package.json
+++ b/Documents/sentiment/review-dashboard/package.json
@@ -18,6 +18,7 @@
     "chartjs-plugin-annotation": "^3.1.0",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.2",
+    "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.536.0",
     "openai": "^5.11.0",
