--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,7 @@ services:
   - type: web
     name: sentiment-review-dashboard
     env: node
+    branch: main
     buildCommand: cd Documents/sentiment/review-dashboard && npm install && npm run build
     startCommand: cd Documents/sentiment/review-dashboard && npx serve -s dist -p $PORT
     envVars:
