--- a/Documents/sentiment/review-dashboard/backend/package.json
+++ b/Documents/sentiment/review-dashboard/backend/package.json
@@ -30,7 +30,8 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
-    "redis": "^4.6.10"
+    "redis": "^4.6.10",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
