--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,58 @@
+# Environment variables
 .env
+.env.local
+.env.production
+
+# Dependencies
+node_modules/
+backend/node_modules/
+
+# Build outputs
+dist/
+build/
+backend/dist/
+backend/build/
+
+# Logs
+*.log
+dev.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Apple certificates and keys
+*.p8
+*.p12
+*.cer
+AuthKey_*.p8
+ApiKey_*.p8
+
+# Test files
+test-*.js
+verify-*.js
+
+# Scripts
+*.sh
+
+# Python files
+*.py
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# IDE files
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Documentation drafts
+INTELLIGENCE_BRIEFING_*.md
+CHECK_*.md
+VERIFY_*.md
+
+# Temporary files
+*.tmp
+*.temp
+*.bak
