--- a/Documents/sentiment/review-dashboard/package.json
+++ b/Documents/sentiment/review-dashboard/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@google/generative-ai": "^0.24.1",
+    "@supabase/supabase-js": "^2.57.4",
     "axios": "^1.11.0",
     "chart.js": "^4.5.0",
     "chartjs-plugin-annotation": "^3.1.0",
