--- a/Documents/sentiment/review-dashboard/package.json
+++ b/Documents/sentiment/review-dashboard/package.json
@@ -15,6 +15,7 @@
     "@google/generative-ai": "^0.24.1",
     "@supabase/supabase-js": "^2.57.4",
     "axios": "^1.11.0",
+    "bcryptjs": "^3.0.2",
     "chart.js": "^4.5.0",
     "chartjs-plugin-annotation": "^3.1.0",
     "date-fns": "^4.1.0",
@@ -24,12 +25,14 @@
     "lucide-react": "^0.536.0",
     "node-fetch": "^3.3.2",
     "openai": "^5.11.0",
+    "pg": "^8.16.3",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.1",
     "recharts": "^3.1.1",
     "sentiment": "^5.0.2",
+    "uuid": "^13.0.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
