fix: resolve Render deployment issues by removing server-side dependencies
- Removed Supabase, PostgreSQL, bcryptjs, uuid, jsonwebtoken, and express from frontend
- Updated databaseService.js to use localStorage only (no external dependencies)
- Fixed duplicate signOut declaration in App.jsx
- Database functionality now uses localStorage for all environments
- Backend integration will be handled through API endpoints instead of direct DB access
- Build now succeeds without dependency conflicts

--- a/render.yaml
+++ b/render.yaml
@@ -18,6 +18,8 @@ services:
         value: https://sentiment-review-backend.onrender.com/api/reddit
       - key: VITE_APPLE_API_ENDPOINT
         value: https://sentiment-review-backend.onrender.com/api/apple-reviews
+      - key: VITE_GEMINI_API_KEY
+        sync: false
 
   # Backend Service
   - type: web
