--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
     rootDir: Documents/sentiment/review-dashboard
     buildCommand: npm ci && npm run build
     startCommand: npx serve -s dist -p $PORT
-    healthCheckPath: /
+    healthCheckPath: /health.html
     envVars:
       - key: NODE_VERSION
         value: 22.16.0
@@ -20,6 +20,8 @@ services:
         value: https://sentiment-review-backend.onrender.com/api/apple-reviews
       - key: VITE_GEMINI_API_KEY
         sync: false
+      - key: VITE_API_ENDPOINT
+        value: https://sentiment-review-backend.onrender.com
 
   # Backend Service
   - type: web
