feat: integrate PostgreSQL database for user accounts
- Add PostgreSQL connection module with schema initialization
- Create authentication API endpoints (signup, signin, signout)
- Create assignments API endpoints for review assignments
- Update frontend to use backend API with localStorage fallback
- Add JWT-based session management
- Configure database environment variables in render.yaml
- Add comprehensive database setup documentation

Users can now create accounts that persist in Render PostgreSQL database

--- a/render.yaml
+++ b/render.yaml
@@ -82,3 +82,9 @@ services:
         value: "900000"
       - key: RATE_LIMIT_MAX
         value: "100"
+        
+      # Database Configuration
+      - key: DATABASE_URL
+        sync: false
+      - key: JWT_SECRET
+        generateValue: true
