--- a/Documents/sentiment/review-dashboard/backend/package.json
+++ b/Documents/sentiment/review-dashboard/backend/package.json
@@ -23,6 +23,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -30,6 +31,7 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "pg": "^8.16.3",
     "redis": "^4.6.10",
     "xml2js": "^0.6.2"
   },
