fix: require authentication for all app access
- Protected all routes with authentication requirement
- Removed guest login option from frontend and backend
- Users must now create account or sign in to access app
- All user data stored in PostgreSQL database on Render
- Added /login route that redirects to main app after authentication
- Updated environment variables for authentication endpoints
- Backend returns 403 error for guest login attempts
- Added comprehensive authentication documentation

BREAKING CHANGE: Guest access is no longer available. All users must authenticate.

--- a/.env.production.example
+++ b/.env.production.example
@@ -1,9 +1,12 @@
 # Production Environment Variables for Frontend
 
-# Backend API URL (optional - defaults to production URL)
-# VITE_BACKEND_URL=https://sentiment-review-backend.onrender.com
+# Backend API URL (required for authentication)
+VITE_API_ENDPOINT=https://sentiment-review-backend.onrender.com
 
-# Apple API endpoint (optional - defaults to production URL)
-# VITE_APPLE_API_ENDPOINT=https://sentiment-review-backend.onrender.com/api/apple-reviews
+# Apple API endpoint (required)
+VITE_APPLE_API_ENDPOINT=https://sentiment-review-backend.onrender.com/api/apple-reviews
+
+# Reddit API endpoint (required)
+VITE_REDDIT_API_ENDPOINT=https://sentiment-review-backend.onrender.com/api/reddit
 
 # Note: Reddit credentials should be set in the backend environment, not frontend
