--- a/.env.example
+++ b/.env.example
@@ -2,12 +2,14 @@
 # Get your API key from: https://makersuite.google.com/app/apikey
 VITE_GEMINI_API_KEY=your-gemini-api-key-here
 
-# Apple App Store API Configuration
-# For local development, use the backend service URL
-VITE_APPLE_API_ENDPOINT=http://localhost:3001/api/apple-reviews
-# For production, use your deployed backend URL:
-# VITE_APPLE_API_ENDPOINT=https://your-backend.com/api/apple-reviews
+# Backend API Configuration (required for authentication)
+VITE_API_ENDPOINT=http://localhost:3001
 
-# Optional: Other environment variables
-# NODE_ENV=development
-# VITE_API_URL=http://localhost:3000
+# Apple App Store API Configuration
+VITE_APPLE_API_ENDPOINT=http://localhost:3001/api/apple-reviews
+
+# Reddit API Configuration
+VITE_REDDIT_API_ENDPOINT=http://localhost:3001/api/reddit
+
+# Optional: OpenAI API for advanced features
+# VITE_OPENAI_API_KEY=your-openai-api-key-here
