--- a/.env.production
+++ b/.env.production
@@ -2,6 +2,7 @@
 # These will be used during build time
 
 # Backend API endpoints
+VITE_API_ENDPOINT=https://sentiment-review-backend.onrender.com
 VITE_APPLE_API_ENDPOINT=https://sentiment-review-backend.onrender.com/api/apple-reviews
 VITE_REDDIT_API_ENDPOINT=https://sentiment-review-backend.onrender.com/api/reddit
 
